# substrata

./: BRANCH_README.md  CMakeLists.txt  LICENCE  README.md  functions.cmake
audio/: AudioEngine.cpp  AudioEngine.h  AudioFileReader.cpp  AudioFileReader.h  AudioResampler.cpp  AudioResampler.h  MP3AudioFileReader.cpp  MP3AudioFileReader.h  MicReadThread.cpp  MicReadThread.h  StreamerThread.cpp  StreamerThread.h  WavAudioFileReader.cpp  WavAudioFileReader.h
backup_bot/: BackupBot.cpp  CMakeLists.txt
basis_universal/: glarenotes.txt
browser_process/: BrowserProcess.cpp  CMakeLists.txt  manifest.manifest
cmake/: libressl.cmake  llvm.cmake  openssl.cmake  shared_cxx_settings.cmake  shared_settings.cmake  shared_target_settings.cmake  ssl.cmake  winter.cmake
cv_bot/: CMakeLists.txt  CVBot.cpp  CryptoVoxelsLoader.cpp  CryptoVoxelsLoader.h
docs/: CAMERA_WORLD_STREAM_IMPLEMENTATION_PLAN_2026-02-27.md  SECURITY.md  building.txt  changelog.txt  fuzzing.txt  lets_encrypt.txt  licence.txt  networked physics.txt  running server.txt
ethereum/: EthAddress.h  EthTransaction.h  Infura.cpp  Infura.h  RLP.cpp  RLP.h  Signing.cpp  Signing.h  UInt256.cpp  UInt256.h
gui_client/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AddObjectDialog.cpp  AddObjectDialog.h  AddObjectDialog.ui  AddObjectPreviewWidget.cpp  AddObjectPreviewWidget.h  AddVideoDialog.cpp  AddVideoDialog.h  AddVideoDialog.ui  AnimatedTextureManager.cpp  AnimatedTextureManager.h  AnimationManager.cpp  AnimationManager.h  AvatarGraphics.cpp  AvatarGraphics.h  AvatarGroundingUtils.h  AvatarPreviewGLUIWidget.cpp  AvatarPreviewGLUIWidget.h  AvatarPreviewWidget.cpp  AvatarPreviewWidget.h  AvatarSettingsDialog.cpp  AvatarSettingsDialog.h  AvatarSettingsDialog.ui  BikePhysics.cpp  BikePhysics.h  BiomeManager.cpp  BiomeManager.h  BoatPhysics.cpp  BoatPhysics.h  BrowserVidPlayer.cpp  BrowserVidPlayer.h  BuildScatteringInfoTask.cpp  BuildScatteringInfoTask.h  CEF.cpp  CEF.h  CEFInternal.cpp  CEFInternal.h  CMakeLists.txt  (+229 more)
icons/: icon_256x256.xcf  substrata.icns  substrata.rc  substrata.xcf
jolt/: glarenotes.txt
libaudiodecoder-master/: glarenotes.txt
libressl_patches/: posix_win.c  tls_config.c
libs/: CMakeLists.txt
libs/fft2d/: fft4f2d.c  fft4f2d.f  fft4f2dt.c  fft4f2dt.f  fft4g.c  fft4g.f  fft4g2d.c  fft4g2d.f  fft4g2dt.c  fft4g2dt.f  readme2d.txt  shrtdct.c  shrtdctt.c
lightmapper_bot/: CMakeLists.txt  LightMapperBot.cpp
miniaudio/: notes.txt
minimp3/: minimp3_ex.h  notes.txt
opus/: glarenotes.txt  opus.cmake
qt/: .gitignore  FileSelectWidget.cpp  FileSelectWidget.h  FileSelectWidget.ui  FlowLayout.cpp  FlowLayout.h  IndigoDoubleSpinBox.cpp  IndigoDoubleSpinBox.h  QtUtils.cpp  QtUtils.h  RealControl.cpp  RealControl.h  RealControl.ui  SignalBlocker.cpp  SignalBlocker.h  ui_FileSelectWidget.h
resonance-audio/: nick notes.txt
resources/: Capsule_obj_7611321750126528672.bmesh  Quad_obj_17249492137259942610.bmesh  bike_mats.xml  boat_mats.xml  camera.bmesh  car_mats.xml  cirrus.exr  elm_RT_glb_3393252396927074015.bmesh  foam_windowed.basis  foam_windowed.ktx2  hovercar_mats.xml  jet_ski_mats.xml  portal.bmesh  sky_no_sun.exr  spotlight4.glb  spotlight5.bmesh  steps.igmesh  summoned_bike_script.xml  summoned_boat_script.xml  summoned_car_script.xml  summoned_hovercar_script.xml  summoned_jet_ski_script.xml  summoned_seatobject_script.xml  wedge.igmesh  winter_stdlib.txt  xavatar5.glb  xbot.bmesh  xbot.glb  xbot_glb_3242545562312850498.bmesh
rtaudio/: RtAudio.cpp  RtAudio.h  glare notes.txt
screenshot_bot/: CMakeLists.txt  ScreenshotBot.cpp
scripts/: NSISStringUtils.nsh  build_jpegturbo.rb  build_libressl.rb  build_llvm.rb  build_qt.rb  cmake.rb  config-lib.rb  config.rb  copy_files_to_output.rb  dist_utils.rb  get_libs.rb  linker_script.txt  make_emscripten_preload_data.rb  rebuild_moc_files.rb  script_utils.rb  update_webclient_cache_busting_hashes.rb
secp256k1-master/: glarenotes.txt
server/: APIKey.cpp  APIKey.h  AuctionLock.cpp  AuctionLock.h  Avatar.cpp  Avatar.h  CMakeLists.txt  ChatBot.cpp  ChatBot.h  ChunkGenThread.cpp  ChunkGenThread.h  CryptoVoxelsLoader.cpp  CryptoVoxelsLoader.h  DynamicTextureUpdaterThread.cpp  DynamicTextureUpdaterThread.h  LLMThread.cpp  LLMThread.h  ListenerThread.cpp  ListenerThread.h  LuaHTTPRequestManager.cpp  LuaHTTPRequestManager.h  LuaHTTPWorkerThread.cpp  LuaHTTPWorkerThread.h  MeshLODGenThread.cpp  MeshLODGenThread.h  NewsPost.cpp  NewsPost.h  ObjectPermissions.cpp  ObjectPermissions.h  Order.cpp  Order.h  ParcelAuction.cpp  ParcelAuction.h  PasswordReset.cpp  PasswordReset.h  Photo.cpp  Photo.h  Screenshot.cpp  Screenshot.h  Server.cpp  (+32 more)
server_config_files/: substrata_server_config.xml  substrata_server_credentials.txt
server_dist_resources/: Clapping.subanim  Dancing 2.subanim  Dancing.subanim  Excited.subanim  Looking.subanim  Quick Informal Bow.subanim  Rejected.subanim  Sit.subanim  Sitting On Ground.subanim  Sleeping Idle.subanim  Standing React Death Forward.subanim  Waving 1.subanim  Waving 2.subanim  Yawn.subanim
shaders/: imposter_frag_shader.glsl  imposter_vert_shader.glsl  parcel_frag_shader.glsl  parcel_vert_shader.glsl  portal_frag_shader.glsl  portal_vert_shader.glsl
shared/: Avatar.cpp  Avatar.h  DependencyURL.h  FileTypes.cpp  FileTypes.h  GearItem.cpp  GearItem.h  GestureSettings.cpp  GestureSettings.h  GroundPatch.cpp  GroundPatch.h  ImageDecoding.cpp  ImageDecoding.h  LODChunk.cpp  LODChunk.h  LODGeneration.cpp  LODGeneration.h  LuaScriptEvaluator.cpp  LuaScriptEvaluator.h  MessageUtils.h  ObjectEventHandlers.cpp  ObjectEventHandlers.h  Parcel.cpp  Parcel.h  ParcelID.h  Protocol.h  ProtocolStructs.h  RateLimiter.cpp  RateLimiter.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ScriptTimerQueue.cpp  ScriptTimerQueue.h  SubstrataLuaVM.cpp  SubstrataLuaVM.h  TimeStamp.cpp  TimeStamp.h  TimerQueue.cpp  (+20 more)
source_resources/: left_tab.xcf  spotlight5.glb  voxel_dummy_texture.xcf
stress_test/: CMakeLists.txt  StressTest.cpp
systemd/: cyberspace-server.service  using the service.txt
testfiles/: instancing_test.win  (+2 more)
(+298 files in other folders)
